--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 { 
-  "ChatOwner": "6281234795656@s.whatsapp.net",
+  "ChatOwner": "447466989823",
   "ownerNumber": "6281234795656@s.whatsapp.net",
   "botName": "Sedative SelfBot",
   "ownerName": "Rafly",
