--- a/config.json
+++ b/config.json
@@ -2,11 +2,11 @@
   "ChatOwner": "447466989823",
   "ownerNumber": "6281234795656@s.whatsapp.net",
   "botName": "Sedative SelfBot",
-  "ownerName": "Rafly",
+  "ownerName": "@Rafly͘¹⃭¹~",
   "sessionName": "session",
   "api_lolkey": "Rafly111104",
   "group":{
-  "judul": "𝚂𝙴𝙳𝙰𝚃𝙸𝚅𝙴 𝙰𝚁𝙴𝙰",
+  "judul": "𝚂𝙴𝙳𝙰𝚃𝙸𝚅𝙴 𝙲𝙾𝙼𝙼𝚄𝙽𝙸𝚃𝚈",
   "link": "https://chat.whatsapp.com/GDTlnAnrCPfEPsXK1XkEvB"
   }
 }
