--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "lolcatjs": "^2.4.1",
     "link-preview-js": "3.0.4",
     "path": "^0.12.7",
+    "megajs": "1.1.3",
     "moment-timezone": "^0.5.34",
     "node-fetch": "2.6.1",
     "node-webpmux": "^3.1.1",
     "scrape-primbon": "^1.1.0",
+    "urlexpand": "0.0.2",
     "util":"^0.12.5",
     "qrcode": "^1.5.0",
     "qrcode-terminal": "^0.12.0",
