--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "ChatOwner": "447466989823",
   "ownerNumber": "6281234795656@s.whatsapp.net",
   "botName": "Sedative SelfBot",
+  "prefix": "#",
   "ownerName": "@Rafly͘¹⃭¹~",
   "sessionName": "session",
   "api_lolkey": "Rafly111104",
