--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "ownerNumber": "6281234795656@s.whatsapp.net",
   "botName": "Sedative SelfBot",
   "prefix": "#",
-  "ownerName": "@Rafly͘¹⃭¹~",
+  "ownerName": "@Rafly͘~",
   "sessionName": "session",
   "api_lolkey": "Rafly111104",
   "group":{
