--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-  "ChatOwner": "6281234795656",
-  "ownerNumber": "6281234795656@s.whatsapp.net",
+  "ChatOwner": "447466989823",
+  "ownerNumber": "447466989823@s.whatsapp.net",
   "botName": "Sedative SelfBot",
-  "prefix": "#",
+  "prefix": "!",
   "ownerName": "@Rafly͘~",
   "sessionName": "session",
   "api_lolkey": "Rafly111104",
