--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "util":"^0.12.5",
     "qrcode": "^1.5.0",
     "qrcode-terminal": "^0.12.0",
-    "wa-sticker-formatter": "^4.3.2"
+    "wa-sticker-formatter": "^4.3.2",
+    "ytdl-core": "4.11.4"
   }
 }
