--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@adiwajshing/baileys": "github:WhiskeySockets/Baileys#master",
     "@adiwajshing/keyed-db": "^0.2.4",
-    "@bochilteam/scraper": "^3.0.0",
+    "@bochilteam/scraper-sosmed": "^1.0.5",
     "@xct007/frieren-scraper": "0.0.2",
     "colors": "^1.4.0",  
     "chalk": "^4.1.2",
@@ -33,7 +33,6 @@
     "util":"^0.12.5",
     "qrcode": "^1.5.0",
     "qrcode-terminal": "^0.12.0",
-    "wa-sticker-formatter": "^4.3.2",
-    "y2matejs":"1.0.0"
+    "wa-sticker-formatter": "^4.3.2"
   }
 }
