--- a/config.json
+++ b/config.json
@@ -1,6 +1,5 @@
 {
-  "ChatOwner": "447466989823",
-  "ownerNumber": "447466989823@s.whatsapp.net",
+  "ownerNumber": "447466989823",
   "botName": "Sedative SelfBot",
   "prefix": "!",
   "ownerName": "@Rafly͘~",
