--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@Sedative_Selfbot",
-  "version": "4.0.0",
+  "name": "sedative_selfbot",
+  "version": "2.0.0",
   "description": "Create By Rafly11",
   "main": "main.js",
   "scripts": {
@@ -11,7 +11,7 @@
   "dependencies": {
     "@adiwajshing/baileys": "github:WhiskeySockets/Baileys#master",
     "@adiwajshing/keyed-db": "^0.2.4",
-    "@bochilteam/scraper-sosmed": "^1.0.5",
+    "@bochilteam/scraper": "^4.2.4",
     "@xct007/frieren-scraper": "0.0.2",
     "colors": "^1.4.0",  
     "chalk": "^4.1.2",
