--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "ownerNumber": "447466989823",
+  "ownerNumber": "0",
   "botName": "Sedative SelfBot",
   "prefix": "!",
   "ownerName": "@Rafly͘~",
