--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "ownerNumber": "6281234795656",
-  "botName": "Sedative SelfBot",
+  "botName": "Simple-SelfBot",
   "prefix": "!",
   "ownerName": "@Rafly͘~",
   "group": {
