--- a/config.json
+++ b/config.json
@@ -3,8 +3,5 @@
   "botName": "Simple-SelfBot",
   "prefix": "!",
   "ownerName": "@Rafly͘~",
-  "group": {
-    "judul": "𝚂𝙴𝙳𝙰𝚃𝙸𝚅𝙴 𝙲𝙾𝙼𝙼𝚄𝙽𝙸𝚃𝚈",
-    "link": "https://chat.whatsapp.com/Jrl8ponqQE87XtBt7zytfa"
-  }
+  "wm": "𝚂𝙴𝙳𝙰𝚃𝙸𝚅𝙴 𝙲𝙾𝙼𝙼𝚄𝙽𝙸𝚃𝚈"
 }
