--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "sedative_selfbot",
   "version": "2.0.0",
-  "description": "Create By Rafly11",
+  "description": "Create By Rafly A.",
   "main": "main.js",
   "scripts": {
     "start": "node main.js"
   },
-  "author": "Rafly11",
+  "author": "Rafly A.",
   "license": "Apache-2.0",
   "dependencies": {
     "@adiwajshing/baileys": "github:WhiskeySockets/Baileys#master",
